; ModuleID = '/home/carl/AnghaBench/linux/drivers/opp/extr_core.c__remove_opp_dev.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/opp/extr_core.c__remove_opp_dev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.opp_device = type { i32 }
%struct.opp_table = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.opp_device*, %struct.opp_table*)* @_remove_opp_dev to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_remove_opp_dev(%struct.opp_device* %0, %struct.opp_table* %1) #0 {
  %3 = alloca %struct.opp_device*, align 8
  %4 = alloca %struct.opp_table*, align 8
  store %struct.opp_device* %0, %struct.opp_device** %3, align 8
  store %struct.opp_table* %1, %struct.opp_table** %4, align 8
  %5 = load %struct.opp_device*, %struct.opp_device** %3, align 8
  %6 = load %struct.opp_table*, %struct.opp_table** %4, align 8
  %7 = call i32 @opp_debug_unregister(%struct.opp_device* %5, %struct.opp_table* %6)
  %8 = load %struct.opp_device*, %struct.opp_device** %3, align 8
  %9 = getelementptr inbounds %struct.opp_device, %struct.opp_device* %8, i32 0, i32 0
  %10 = call i32 @list_del(i32* %9)
  %11 = load %struct.opp_device*, %struct.opp_device** %3, align 8
  %12 = call i32 @kfree(%struct.opp_device* %11)
  ret void
}

declare dso_local i32 @opp_debug_unregister(%struct.opp_device*, %struct.opp_table*) #1

declare dso_local i32 @list_del(i32*) #1

declare dso_local i32 @kfree(%struct.opp_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
